<resources>
    <string name="app_name">BlaBlaWild²</string>
    <string name="create">Create</string>
    <string name="date">Date</string>
    <string name="departure_date">Departure date</string>
    <string name="driver">Driver</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="add_your_itinerary">Add your itinerary</string>
    <string name="welcome_into_blablawild">Welcome into BlaBlaWild²</string>
    <string name="search_an_itinerary">Search an itinerary</string>
    <string name="price">Price</string>
    <string name="fill_all_fields">Please fill all the fields !</string>
    <string name="search">Search</string>
    <string name="departure_to_destination"><![CDATA[%s >> %s]]></string>
</resources>
